--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -1,3 +1,9 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+*{
+    margin: 0;
+    padding: 0;
+}
+body{
+    background-color:black;
+    font: size 24px;
+    color: white;
+}
