--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -7,3 +7,7 @@ body{
     font: size 24px;
     color: white;
 }
+.gradient-text{
+    -webkit-background-clip: text;
+    @apply bg-gradient-to-t from-blue-500 to-cyan-500 text-transparent;
+}
