--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -11,3 +11,40 @@ body{
     -webkit-background-clip: text;
     @apply bg-gradient-to-t from-blue-500 to-cyan-500 text-transparent;
 }
+@keyframes glitch {
+    0% {
+      transform: skew(0.3deg);
+      text-shadow: 2px 2px 0 red, -2px -2px 0 blue;
+    }
+    20% {
+      transform: skew(0.1deg);
+      text-shadow: -2px -2px 0 red, 2px 2px 0 blue;
+    }
+    40% {
+      transform: skew(0.2deg);
+      text-shadow: 2px 2px 0 red, -2px -2px 0 blue;
+    }
+    60% {
+      transform: skew(0.3deg);
+      text-shadow: -2px -2px 0 red, 2px 2px 0 blue;
+    }
+    80% {
+      transform: skew(0.1deg);
+      text-shadow: 2px 2px 0 red, -2px -2px 0 blue;
+    }
+    100% {
+      transform: skew(0.3deg);
+      text-shadow: -2px -2px 0 red, 2px 2px 0 blue;
+    }
+  }
+  
+  .glitch {
+    position: relative;
+    display: inline-block;
+    animation: glitch 1.5s infinite linear alternate-reverse;
+  }
+  
+  .animate-glitch {
+    animation: glitch 1.5s infinite linear alternate-reverse;
+  }
+  
