--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 body{
-    background-color:black;
+    background-color:rgb(23, 18, 18);
     font: size 24px;
     color: white;
     overflow-x: hidden;
