--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 *{
     margin: 0;
     padding: 0;
@@ -5,7 +9,7 @@
 }
 body{
     background-color:rgb(23, 18, 18);
-    font: size 24px;
+    font-size: 24px;
     color: white;
     overflow-x: hidden;
 }
